--- a/lokasi.html
+++ b/lokasi.html
@@ -93,6 +93,7 @@
             <main class="hero10">
                 <h1>LOKASI PLPT</h1>
                 <img src="LOGO.png" class="logo2" width="30%" height="30%" />
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.9624651205463!2d98.6810084!3d3.596077900000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30313100190c8d19%3A0xa035b4b71cda12b5!2sPusat%20Layanan%20Psikologi%20Terapan!5e0!3m2!1sid!2sid!4v1722645424871!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <p align="justify"><b>Pusat Layanan Psikologi Terapan berlokasi di Jl. Sutomo No.4A Medan, Gedung Dr. Ir. Nurdin Tampubolon Lt.2, Perintis, Kecamatan Medan Timur, Kota Medan.</b></p>
             </main>
          </div>
